Fix contrast issues

--- a/static/css/sass/cdr-ui.scss
+++ b/static/css/sass/cdr-ui.scss
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Libre+Baskerville:400i|Open+Sans:400,600');
 
 $unc-blue: #4B9CD3;
-$link-blue: #007FAE;
 $unc-navy: #13294B;
 $light-gray: #E1E1E1;
 $dark-gray: #767676;
@@ -16,10 +15,6 @@ $black: #151515;
 
 body {
   font-family: 'Open Sans', sans-serif;
-}
-
-a {
-  color: $link-blue;
 }
 
 .logo-row {
@@ -205,7 +200,7 @@ header {
       color: white;
       font-size: 16px;
       &:hover, &:active {
-        color: $unc-blue;
+        color: $unc-navy;
       }
     }
   }
@@ -449,6 +444,7 @@ footer {
     line-height: 25px;
   }
 }$unc-blue: #4B9CD3;
+$unc-navy: #13294B;
 $light-gray: #E1E1E1;
 $border-style: 1px solid $light-gray;
 $box-shadow-color: rgba(211,211,211,0.5);
@@ -676,8 +672,8 @@ p.spacing {
 }
 
 .item_container_count {
-  background-color: $unc-blue;
-  border: 1px solid $unc-blue;
+  background-color: #1A698C;
+  border: 1px solid #1A698C;
   border-radius: 5px;
   color: white;
   line-height: 18px;
