--- a/static/css/sass/cdr_ui_styles.scss
+++ b/static/css/sass/cdr_ui_styles.scss
@@ -1,4 +1,5 @@
 $unc-blue: #4B9CD3;
+$unc-navy: #13294B;
 $light-gray: #E1E1E1;
 $border-style: 1px solid $light-gray;
 $box-shadow-color: rgba(211,211,211,0.5);
@@ -226,8 +227,8 @@ p.spacing {
 }
 
 .item_container_count {
-  background-color: $unc-blue;
-  border: 1px solid $unc-blue;
+  background-color: #1A698C;
+  border: 1px solid #1A698C;
   border-radius: 5px;
   color: white;
   line-height: 18px;
